[package]
name = "dtop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
sysinfo = "0.28.1"
tokio = { version = "1.26.0", features = ["full"] }
serde_json = "1.0.94"
serde = { version = "1.0.154", features = ["derive"] }
